sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:2: error: Missing closing brace `}' assumed here
def bubbleSort2() 
^AlgBubbleSort2:3: error: expected class or object definition
{
^