sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() 
{
for(i<- getnombrevaleurs()-2 to 0 by -1)
  {
	for(j<-0 to i)
	if(plusPetit(i,i+1)){
	echange(i+1,i)
	}
 }
 
